<resources>

    <string name="app_name">淡定書城</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">淡定書城</string>
    <string name="txt_account">帳號：</string>
    <string name="txt_password">密碼：</string>
    <string name="txt_mem_name">姓名：</string>
    <string name="txt_password2">密碼確認：</string>
    <string name="btn_register">註冊</string>
    <string name="btn_abort">放棄</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_book_read">BookRead</string>
    <string name="title_activity_add_mem">AddMem</string>
    <string name="title_activity_book_list">BookList</string>
    <string name="btn_bookread">離線閱讀</string>
    <string name="btn_login">登入</string>
    <string name="url_host">http://dandingbook.html-5.me/</string>
    <string name="url_agent">agent.php</string>
    <string name="url_image">upload/images/</string>
    <string name="url_book">upload/book/</string>
    <string name="pwd_warn">*您的確認密碼有誤喔，請再次確認</string>
    <string name="account_warn">您的帳號已重複，請重新輸入</string>
    <string name="login_warn">您輸入的帳密有誤，請重新輸入</string>
    <string name="book_list_title">可下載的書籍</string>
    <string name="book_detail_title">書籍資料</string>
    <string name="off_read_list_title">已下載書籍</string>
    <string name="detail_read">閱讀</string>
    <string name="detail_others">下載其他</string>
    <string name="regist_ok">您的帳號已註冊成功!</string>
    <string name="pgs_title">連線伺服器</string>
    <string name="pgs_connecting">連線中，請淡定.....</string>
    <string name="pgs_reading">讀取資料中，請淡定.....</string>

</resources>